# NonagaAlpha

./: .gitignore  README.md  architecture_overview.md  best_weights.json  nonaga_buffer.pt  nonagazero.pt  nonagazero_iter_1.pt  nonagazero_iter_10.pt  nonagazero_iter_11.pt  nonagazero_iter_12.pt  nonagazero_iter_13.pt  nonagazero_iter_14.pt  nonagazero_iter_15.pt  nonagazero_iter_16.pt  nonagazero_iter_17.pt  nonagazero_iter_18.pt  nonagazero_iter_19.pt  nonagazero_iter_2.pt  nonagazero_iter_20.pt  nonagazero_iter_21.pt  nonagazero_iter_22.pt  nonagazero_iter_23.pt  nonagazero_iter_24.pt  nonagazero_iter_25.pt  nonagazero_iter_26.pt  nonagazero_iter_27.pt  nonagazero_iter_28.pt  nonagazero_iter_29.pt  nonagazero_iter_3.pt  nonagazero_iter_30.pt  nonagazero_iter_31.pt  nonagazero_iter_32.pt  nonagazero_iter_33.pt  nonagazero_iter_34.pt  nonagazero_iter_35.pt  nonagazero_iter_36.pt  nonagazero_iter_37.pt  nonagazero_iter_38.pt  nonagazero_iter_39.pt  nonagazero_iter_4.pt  (+9 more)
nonaga/: __init__.py  agents.py  cli.py  encoder.py  eval.py  geometry.py  learn.py  mcts.py  moves.py  nn.py  rules.py  search.py  selfplay.py  state.py  symmetry.py  train_nn.py  train_nn_parallel.py  web.py
nonaga/static/: app.js  index.html  style.css
scripts/: runpod_setup.sh  runpod_train.sh  sync_to_runpod.sh
tests/: test_rules.py  test_search_and_play.py
